--- a/src/app/home/fashion/fashion-one/fashion-one.component.html
+++ b/src/app/home/fashion/fashion-one/fashion-one.component.html
@@ -1,14 +1,14 @@
 <app-header-one [sticky]="true"></app-header-one>
 
 <!-- Home slider start-->
-<section class="p-0">
+<div class="p-0 body-section">
     <app-slider [sliders]="sliders" [textClass]="'text-center'" [category]="'fashion'" [buttonText]="'shop now'">
     </app-slider>
-</section>
+</div>
 <!-- Home slider End -->
 
 <!-- collection banner start-->
-<section class="pb-0">
+<section>
     <div class="container">
         <div class="row">
             <div class="col-md-10 offset-md-2">
@@ -34,7 +34,7 @@
 <!-- collection banner End -->
 
 <!-- Product slider start-->
-<div class="title1 section-t-space">
+<div class="title1 py-3">
     <h4>special offer</h4>
     <h2 class="title-inner1">top collection</h2>
 </div>
@@ -53,7 +53,7 @@
         </div>
     </div>
 </div>
-<section class="section-b-space p-t-0">
+<section>
     <div class="container">
         <div class="row">
             <div class="col">
@@ -75,7 +75,7 @@
 <!-- Product slider End -->
 
 <!-- Parallax banner start-->
-<section class="p-0">
+<section>
     <div class="full-banner parallax-banner1 parallax text-center p-left"
         [ngStyle]="{'background-image': 'url(assets/images/parallax/1.jpg)'}">
         <div class="container">
@@ -94,11 +94,11 @@
 <!-- Parallax banner End -->
 
 <!-- Tab product start-->
-<div class="title1 section-t-space">
+<div class="title1 py-3">
     <h4>exclusive products</h4>
     <h2 class="title-inner1">special products</h2>
 </div>
-<section class="section-b-space p-t-0">
+<section>
     <div class="container">
         <div class="row">
             <div class="col theme-tab">
@@ -165,7 +165,7 @@
 <!-- Instagram section End -->
 
 <!--  logo section start-->
-<section class="section-b-space">
+<section>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
