--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -27,7 +27,7 @@
 			</section>
 		</div>
 	</div>
-	<section class="section-b-space footer-dark py-5">
+	<section class="mt-5 footer-dark py-5">
 		<div class="container">
 			<div class="row footer-theme partition-f">
 				<div class="col-lg-4 col-md-6">
