--- a/src/app/shared/header/header-one/header-one.component.html
+++ b/src/app/shared/header/header-one/header-one.component.html
@@ -1,4 +1,4 @@
-<header class="sticky" [ngClass]="class" [class.fixed]="stick && sticky">
+<header class="fixed-top">
     <div class="mobile-fix-option"></div>
     <div class="top-header" *ngIf="topbar">
         <div class="container">
