--- a/src/app/shop/checkout/checkout.component.scss
+++ b/src/app/shop/checkout/checkout.component.scss
@@ -1,9 +1,9 @@
 .Sequence {
-    font-size: 15px;
+    font-size: 14px;
     color: #c62127;
     background-color: #cecece;
     border-radius: 2px;
-    padding: 5px 7px;
+    padding: 3px 7px;
     vertical-align: baseline;
     margin-right: 17px;
 }
@@ -17,17 +17,7 @@
 address {
     width: 100%;
 }
-.checkout-prouduct-img {
-    width: 50px;
-    margin-right:10px;
-    float: left;
-}
-.table thead th {
-    vertical-align: top;
-}
-.checkout-product-table tr th:first-child {
-    min-width: 200px;
-}
+
 .row-column {
     flex-direction: column;
 }
@@ -36,11 +26,17 @@ address {
         flex-direction: row;
     }
 }
-.step-heading  h4 {
+.step-heading  h5 {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 0;
 }
+h5 {
+    font-size: 14px
+}
 .step-heading  .btn-link{
     padding: 0;
+}
+.step-heading .fa-check {
+    color: #388e3c;
 }
