--- a/src/app/shop/checkout/success/success.component.html
+++ b/src/app/shop/checkout/success/success.component.html
@@ -19,171 +19,166 @@
 <!-- Section ends -->
 
 <!-- thank-you section start -->
-<section class="section-b-space light-layout my-5" *ngIf="orderDetails?.length>0">
+<section class="section-b-space light-layout" *ngIf="orderDetails?.length>0">
     <div class="container">
-        <div class="order-success-sec">
-            <div class="left-sec">
-                <div class="success-text">
-                    <img class="mb-4" src="assets/images/icon/check.svg" alt="Success!">
-                    <h2>Thank you!</h2>
 
-                    <p class="mt-5">Payment has been received and Order Placed Successfully</p>
-                    <p><b>Order ID:{{ orderDetails[0].orderNumber }}</b></p>
+        <div class="success-text mb-5">
+            <img class="mb-4" src="assets/images/icon/check.svg" alt="Success!">
+            <h2>Thank you!</h2>
+
+            <p class="mt-5">Payment has been received and Order Placed Successfully</p>
+            <p><b>Order ID:{{ orderDetails[0].orderNumber }}</b></p>
+        </div>
+
+        <div class="order-summary mb-2">
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <h4>summery</h4>
+                    <ul class="order-detail">
+                        <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
+                        <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
+                        <li><span>Order Total:</span>
+                            {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
+                        </li>
+                        <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
+                    </ul>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <h4>shipping address</h4>
+                    <ul class="order-detail">
+                        <li>{{ orderDetails[0].address }}, {{orderDetails[0].city}}</li>
+                        <li>{{ orderDetails[0].state }}</li>
+                        <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
+                        <li>Contact No. {{ orderDetails[0].phone }}</li>
+                    </ul>
                 </div>
             </div>
-            <div class="right-sec">
-                <div class="order-summary mb-2">
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <h4>summery</h4>
-                            <ul class="order-detail">
-                                <li><span>order ID:</span> {{ orderDetails[0].orderNumber }}</li>
-                                <li><span>Order Date:</span> {{ orderDetails[0].orderDate | date : 'MMM dd, yyyy'}}</li>
-                                <li><span>Order Total:</span>
-                                    {{ orderDetails[0].totalAmount | currency:productService?.Currency.currency:'symbol' }}
-                                </li>
-                                <!-- <li><span>Payment Method:</span> Credit Card (**3569)</li> -->
-                            </ul>
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <h4>shipping address</h4>
-                            <ul class="order-detail">
-                                <li>{{ orderDetails[0].address }}, {{orderDetails[0].city}}</li>
-                                <li>{{ orderDetails[0].state }}</li>
-                                <li>{{ orderDetails[0].country }}, {{ orderDetails[0].zipCode }}</li>
-                                <li>Contact No. {{ orderDetails[0].phone }}</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+        </div>
 
-                <h4 class="mb-4">Your Order Details</h4>
-                <div class="order-box">
-                    <div class="table-responsive-sm">
-                        <table class="table table-bordered table-hover">
-                            <thead class="thead-dark">
-                                <tr>
-                                    <th class="thead-dark">
-                                        Product
-                                    </th>
-                                    <th class="thead-dark">
-                                        Price
-                                    </th>
-                                    <th class="thead-dark">
-                                        Qty
-                                    </th>
-                                    <th class="thead-dark"
-                                        *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
-                                        Add. Discount (%)
-                                    </th>
-                                    <th class="thead-dark"
-                                        *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
-                                        Add. Discount Amount
-                                    </th>
-                                    <th class="thead-dark">
-                                        Total Amount
-                                    </th>
-                                    <th class="thead-dark">
-                                        GST Rate(%)
-                                    </th>
-                                    <th class="thead-dark">
-                                        GST Amount
-                                    </th>
-                                    <th class="thead-dark">
-                                        Total
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let product of orderDetails[0].orderDetails">
-                                    <td>
-                                        {{ product?.productName }}
-                                    </td>
-                                    <td>
-                                        {{ product?.salePrice | currency:productService?.Currency.currency:'symbol'}}
-                                    </td>
-                                    <td>
-                                        {{ product?.quantity }}
-                                    </td>
-                                    <td *ngIf="product?.additionalDiscount>0">
-                                        {{ product?.additionalDiscount }}%
-                                    </td>
-                                    <td *ngIf="product?.additionalDiscountAmount>0">
-                                        {{ product?.additionalDiscountAmount | currency:productService?.Currency.currency:'symbol'}}
-                                    </td>
-                                    <td>
-                                        {{ (product?.salePrice*product?.quantity-product?.additionalDiscountAmount) | currency:productService?.Currency.currency:'symbol' }}
-                                    </td>
-                                    <td>
-                                        {{ product?.gstRate }}%
-                                    </td>
-                                    <td>
-                                        {{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}
-                                    </td>
-                                    <td>
-                                        <span
-                                            style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
-                                            {{ (product.salePrice*product?.quantity-product?.additionalDiscountAmount+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
-                                    </td>
-                                </tr>
-                                <tr *ngIf='!orderDetails.length'>
-                                    <td colspan="9" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
-                                    <td colspan="7" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount==0">
-                                        There are no products in cart
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td colspan="3">
-                                        <b>Subtotal</b>
-                                    </td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
-                                    </td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
-                                        <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
-                                    </td>
-                                    <td>
-                                        {{ getTotalAmountWithDis() | currency:productService?.Currency.currency:'symbol'}}
-                                    </td>
-                                    <td></td>
-                                    <td>
-                                        <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
-                                    </td>
-                                    <td>
-                                        <span
-                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                            {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
-                                    </td>
-                                </tr>
+        <h4 class="mb-4">Your Order Details</h4>
+        <div class="order-box">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover checkout-product-table">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th class="thead-dark">
+                                Product
+                            </th>
+                            <th class="thead-dark">
+                                Price
+                            </th>
+                            <th class="thead-dark">
+                                Qty
+                            </th>
+                            <th class="thead-dark" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
+                                Add. Discount (%)
+                            </th>
+                            <th class="thead-dark" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
+                                Add. Discount Amount
+                            </th>
+                            <th class="thead-dark">
+                                Total Amount
+                            </th>
+                            <th class="thead-dark">
+                                GST Rate(%)
+                            </th>
+                            <th class="thead-dark">
+                                GST Amount
+                            </th>
+                            <th class="thead-dark">
+                                Total
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let product of orderDetails[0].orderDetails">
+                            <td>
+                                <img src="assets/images/product/fashion/19.jpg" alt="Product" style="display:none;"
+                                    class="checkout-prouduct-img">
+                                {{ product?.productName }}
+                            </td>
+                            <td>
+                                {{ product?.salePrice | currency:productService?.Currency.currency:'symbol'}}
+                            </td>
+                            <td>
+                                {{ product?.quantity }}
+                            </td>
+                            <td *ngIf="product?.additionalDiscount>0">
+                                {{ product?.additionalDiscount }}%
+                            </td>
+                            <td *ngIf="product?.additionalDiscountAmount>0">
+                                {{ product?.additionalDiscountAmount | currency:productService?.Currency.currency:'symbol'}}
+                            </td>
+                            <td>
+                                {{ (product?.salePrice*product?.quantity-product?.additionalDiscountAmount) | currency:productService?.Currency.currency:'symbol' }}
+                            </td>
+                            <td>
+                                {{ product?.gstRate }}%
+                            </td>
+                            <td>
+                                {{ product?.gstAmount | currency:productService?.Currency.currency:'symbol'}}
+                            </td>
+                            <td>
+                                <span style="float: right; font-size: 16px; line-height: 20px;  font-weight: 400;">
+                                    {{ (product.salePrice*product?.quantity-product?.additionalDiscountAmount+product?.gstAmount) | currency:productService?.Currency.currency:'symbol' }}</span>
+                            </td>
+                        </tr>
+                        <tr *ngIf='!orderDetails.length'>
+                            <td colspan="9" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                            <td colspan="7" *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount==0">
+                                There are no products in cart
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="3">
+                                <b>Subtotal</b>
+                            </td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
+                            </td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0">
+                                <b>{{ getTotalAdditionalDiscountAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
+                            </td>
+                            <td>
+                                {{ getTotalAmountWithDis() | currency:productService?.Currency.currency:'symbol'}}
+                            </td>
+                            <td></td>
+                            <td>
+                                <b>{{ getTotalGSTAmount() | currency:productService?.Currency.currency:'symbol'}}</b>
+                            </td>
+                            <td>
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                    {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                            </td>
+                        </tr>
 
-                                <tr>
+                        <tr>
 
-                                    <td colspan="5">
-                                        <b> Packing</b>
-                                    </td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
-                                    <td colspan="2">
-                                        <span
-                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                            <b>Free Packing</b></span>
-                                    </td>
-                                </tr>
-                                <tr class="total">
-                                    <td colspan="5">
-                                        <b>Total</b>
-                                    </td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
-                                    <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
-                                    <td colspan="2">
-                                        <span
-                                            style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
-                                            {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+                            <td colspan="5">
+                                <b> Packing</b>
+                            </td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                            <td colspan="2">
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                    <b>Free Packing</b></span>
+                            </td>
+                        </tr>
+                        <tr class="total">
+                            <td colspan="5">
+                                <b>Total</b>
+                            </td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                            <td *ngIf="orderDetails[0].orderDetails[0]?.additionalDiscount>0"></td>
+                            <td colspan="2">
+                                <span
+                                    style="float: right; font-size: 16px; line-height: 20px; color: var(--theme-deafult); font-weight: 400;">
+                                    {{ getTotal() | currency:productService?.Currency.currency:'symbol'}}</span>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
