--- a/src/app/shop/checkout/success/success.component.scss
+++ b/src/app/shop/checkout/success/success.component.scss
@@ -1,8 +1,3 @@
-.section-b-space {
-    padding-bottom: 20px !important;
-}
-
-section,
-.section-t-space {
-    padding-top: 20px !important;
+.order-detail li {
+    margin-right: 1rem;
 }
